--- a/EE_Web/test-output/old/Suite/methods.html
+++ b/EE_Web/test-output/old/Suite/methods.html
@@ -1,42 +1,56 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="fcfece">  <td>17/09/13 12:44:33</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Login.selectBrowser(java.lang.String)[pri:0, instance:whitefeather.xedge.testcases.Login@343f4d3d]">&gt;&gt;selectBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@738433734</td>   <td></td> </tr>
-<tr bgcolor="fcfece">  <td>17/09/13 12:44:33</td>   <td>16</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.openLoginPage(java.lang.String)[pri:0, instance:whitefeather.xedge.testcases.Login@343f4d3d]">openLoginPage</td> 
-  <td>main@738433734</td>   <td></td> </tr>
-<tr bgcolor="fcfece">  <td>17/09/13 12:44:43</td>   <td>10407</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.verifyLoginPageBackground()[pri:0, instance:whitefeather.xedge.testcases.Login@343f4d3d]">verifyLoginPageBackground</td> 
-  <td>main@738433734</td>   <td></td> </tr>
-<tr bgcolor="fcfece">  <td>17/09/13 12:44:45</td>   <td>11612</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.verifyClientAccountLogo()[pri:0, instance:whitefeather.xedge.testcases.Login@343f4d3d]">verifyClientAccountLogo</td> 
-  <td>main@738433734</td>   <td></td> </tr>
-<tr bgcolor="fcfece">  <td>17/09/13 12:44:45</td>   <td>11797</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.verifyUsernameLabel()[pri:0, instance:whitefeather.xedge.testcases.Login@343f4d3d]">verifyUsernameLabel</td> 
-  <td>main@738433734</td>   <td></td> </tr>
-<tr bgcolor="fcfece">  <td>17/09/13 12:44:45</td>   <td>11982</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.verifyUsernamePlaceholder()[pri:0, instance:whitefeather.xedge.testcases.Login@343f4d3d]">verifyUsernamePlaceholder</td> 
-  <td>main@738433734</td>   <td></td> </tr>
-<tr bgcolor="fcfece">  <td>17/09/13 12:44:45</td>   <td>12340</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.verifyPasswordLabel()[pri:0, instance:whitefeather.xedge.testcases.Login@343f4d3d]">verifyPasswordLabel</td> 
-  <td>main@738433734</td>   <td></td> </tr>
-<tr bgcolor="fcfece">  <td>17/09/13 12:44:46</td>   <td>12599</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.verifyPasswordPlaceholder()[pri:0, instance:whitefeather.xedge.testcases.Login@343f4d3d]">verifyPasswordPlaceholder</td> 
-  <td>main@738433734</td>   <td></td> </tr>
-<tr bgcolor="fcfece">  <td>17/09/13 12:44:46</td>   <td>12757</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.verifyUsernameInputField()[pri:0, instance:whitefeather.xedge.testcases.Login@343f4d3d]">verifyUsernameInputField</td> 
-  <td>main@738433734</td>   <td></td> </tr>
-<tr bgcolor="fcfece">  <td>17/09/13 12:44:46</td>   <td>12888</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.verifyPasswordInputField()[pri:0, instance:whitefeather.xedge.testcases.Login@343f4d3d]">verifyPasswordInputField</td> 
-  <td>main@738433734</td>   <td></td> </tr>
-<tr bgcolor="fcfece">  <td>17/09/13 12:44:46</td>   <td>13020</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.verifyPasswordWrapper()[pri:0, instance:whitefeather.xedge.testcases.Login@343f4d3d]">verifyPasswordWrapper</td> 
-  <td>main@738433734</td>   <td></td> </tr>
-<tr bgcolor="fcfece">  <td>17/09/13 12:44:46</td>   <td>13299</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.enterLoginId(java.lang.String)[pri:0, instance:whitefeather.xedge.testcases.Login@343f4d3d]">enterLoginId</td> 
-  <td>main@738433734</td>   <td></td> </tr>
-<tr bgcolor="fcfece">  <td>17/09/13 12:44:47</td>   <td>13718</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.enterLoginPassword(java.lang.String)[pri:0, instance:whitefeather.xedge.testcases.Login@343f4d3d]">enterLoginPassword</td> 
-  <td>main@738433734</td>   <td></td> </tr>
-<tr bgcolor="fcfece">  <td>17/09/13 12:44:47</td>   <td>13969</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.verifyLoginButton()[pri:0, instance:whitefeather.xedge.testcases.Login@343f4d3d]">verifyLoginButton</td> 
-  <td>main@738433734</td>   <td></td> </tr>
-<tr bgcolor="fcfece">  <td>17/09/13 12:44:47</td>   <td>14181</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.clickLoginButton()[pri:0, instance:whitefeather.xedge.testcases.Login@343f4d3d]">clickLoginButton</td> 
-  <td>main@738433734</td>   <td></td> </tr>
-<tr bgcolor="beef9d">  <td>17/09/13 12:44:51</td>   <td>17657</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Refresh_Page.refreshWebPage()[pri:0, instance:whitefeather.xedge.testcases.Refresh_Page@53b32d7]">refreshWebPage</td> 
-  <td>main@738433734</td>   <td></td> </tr>
-<tr bgcolor="f4a68b">  <td>17/09/13 12:44:55</td>   <td>21603</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OpenAddLeadRHSPanel.clickAddLeadPlusIcon()[pri:0, instance:whitefeather.xedge.testcases.OpenAddLeadRHSPanel@5442a311]">clickAddLeadPlusIcon</td> 
-  <td>main@738433734</td>   <td></td> </tr>
-<tr bgcolor="c4c875">  <td>17/09/13 12:44:56</td>   <td>22585</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddNewLeadWithDefaultValues.addNewLeadWithDefaultValues()[pri:0, instance:whitefeather.xedge.testcases.AddNewLeadWithDefaultValues@548e7350]">addNewLeadWithDefaultValues</td> 
-  <td>main@738433734</td>   <td></td> </tr>
-<tr bgcolor="82f6ef">  <td>17/09/13 12:44:58</td>   <td>25433</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddActivity.addActivity()[pri:0, instance:whitefeather.xedge.testcases.AddActivity@1a968a59]">addActivity</td> 
-  <td>main@738433734</td>   <td></td> </tr>
+<tr bgcolor="fcfece">  <td>17/09/13 18:56:16</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;OpenLoginPage.selectBrowser(java.lang.String)[pri:0, instance:whitefeather.xedge.core.OpenLoginPage@5442a311]">&gt;&gt;selectBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2095490653</td>   <td></td> </tr>
+<tr bgcolor="fcfece">  <td>17/09/13 18:56:16</td>   <td>31</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OpenLoginPage.openLoginPage(java.lang.String)[pri:0, instance:whitefeather.xedge.core.OpenLoginPage@5442a311]">openLoginPage</td> 
+  <td>main@2095490653</td>   <td></td> </tr>
+<tr bgcolor="beef9d">  <td>17/09/13 18:56:26</td>   <td>10484</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ForgotPassword.openForgotPasswordWindow()[pri:0, instance:whitefeather.xedge.testcases.ForgotPassword@548e7350]">openForgotPasswordWindow</td> 
+  <td>main@2095490653</td>   <td></td> </tr>
+<tr bgcolor="beef9d">  <td>17/09/13 18:56:26</td>   <td>10774</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ForgotPassword.verifyCompanyLogo()[pri:0, instance:whitefeather.xedge.testcases.ForgotPassword@548e7350]">verifyCompanyLogo</td> 
+  <td>main@2095490653</td>   <td></td> </tr>
+<tr bgcolor="beef9d">  <td>17/09/13 18:56:27</td>   <td>10937</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ForgotPassword.verifyRecoveryLabel()[pri:0, instance:whitefeather.xedge.testcases.ForgotPassword@548e7350]">verifyRecoveryLabel</td> 
+  <td>main@2095490653</td>   <td></td> </tr>
+<tr bgcolor="beef9d">  <td>17/09/13 18:56:27</td>   <td>11100</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ForgotPassword.verifyRecoveryMessage()[pri:0, instance:whitefeather.xedge.testcases.ForgotPassword@548e7350]">verifyRecoveryMessage</td> 
+  <td>main@2095490653</td>   <td></td> </tr>
+<tr bgcolor="beef9d">  <td>17/09/13 18:56:27</td>   <td>11238</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ForgotPassword.verifyEmailInputBox()[pri:0, instance:whitefeather.xedge.testcases.ForgotPassword@548e7350]">verifyEmailInputBox</td> 
+  <td>main@2095490653</td>   <td></td> </tr>
+<tr bgcolor="beef9d">  <td>17/09/13 18:56:27</td>   <td>11385</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ForgotPassword.verifyLoginLink()[pri:0, instance:whitefeather.xedge.testcases.ForgotPassword@548e7350]">verifyLoginLink</td> 
+  <td>main@2095490653</td>   <td></td> </tr>
+<tr bgcolor="beef9d">  <td>17/09/13 18:56:27</td>   <td>11553</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ForgotPassword.enterRecoveryEmail(java.lang.String)[pri:0, instance:whitefeather.xedge.testcases.ForgotPassword@548e7350]">enterRecoveryEmail</td> 
+  <td>main@2095490653</td>   <td></td> </tr>
+<tr bgcolor="f4a68b">  <td>17/09/13 18:56:33</td>   <td>17440</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.verifyLoginPageBackground()[pri:0, instance:whitefeather.xedge.testcases.Login@1a968a59]">verifyLoginPageBackground</td> 
+  <td>main@2095490653</td>   <td></td> </tr>
+<tr bgcolor="f4a68b">  <td>17/09/13 18:56:34</td>   <td>18584</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.verifyClientAccountLogo()[pri:0, instance:whitefeather.xedge.testcases.Login@1a968a59]">verifyClientAccountLogo</td> 
+  <td>main@2095490653</td>   <td></td> </tr>
+<tr bgcolor="f4a68b">  <td>17/09/13 18:56:34</td>   <td>18665</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.verifyUsernameLabel()[pri:0, instance:whitefeather.xedge.testcases.Login@1a968a59]">verifyUsernameLabel</td> 
+  <td>main@2095490653</td>   <td></td> </tr>
+<tr bgcolor="f4a68b">  <td>17/09/13 18:56:35</td>   <td>18821</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.verifyUsernamePlaceholder()[pri:0, instance:whitefeather.xedge.testcases.Login@1a968a59]">verifyUsernamePlaceholder</td> 
+  <td>main@2095490653</td>   <td></td> </tr>
+<tr bgcolor="f4a68b">  <td>17/09/13 18:56:35</td>   <td>19035</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.verifyPasswordLabel()[pri:0, instance:whitefeather.xedge.testcases.Login@1a968a59]">verifyPasswordLabel</td> 
+  <td>main@2095490653</td>   <td></td> </tr>
+<tr bgcolor="f4a68b">  <td>17/09/13 18:56:35</td>   <td>19219</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.verifyPasswordPlaceholder()[pri:0, instance:whitefeather.xedge.testcases.Login@1a968a59]">verifyPasswordPlaceholder</td> 
+  <td>main@2095490653</td>   <td></td> </tr>
+<tr bgcolor="f4a68b">  <td>17/09/13 18:56:35</td>   <td>19563</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.verifyUsernameInputField()[pri:0, instance:whitefeather.xedge.testcases.Login@1a968a59]">verifyUsernameInputField</td> 
+  <td>main@2095490653</td>   <td></td> </tr>
+<tr bgcolor="f4a68b">  <td>17/09/13 18:56:35</td>   <td>19717</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.verifyPasswordInputField()[pri:0, instance:whitefeather.xedge.testcases.Login@1a968a59]">verifyPasswordInputField</td> 
+  <td>main@2095490653</td>   <td></td> </tr>
+<tr bgcolor="f4a68b">  <td>17/09/13 18:56:36</td>   <td>19817</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.verifyPasswordWrapper()[pri:0, instance:whitefeather.xedge.testcases.Login@1a968a59]">verifyPasswordWrapper</td> 
+  <td>main@2095490653</td>   <td></td> </tr>
+<tr bgcolor="f4a68b">  <td>17/09/13 18:56:36</td>   <td>19971</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.enterLoginId(java.lang.String)[pri:0, instance:whitefeather.xedge.testcases.Login@1a968a59]">enterLoginId</td> 
+  <td>main@2095490653</td>   <td></td> </tr>
+<tr bgcolor="f4a68b">  <td>17/09/13 18:56:36</td>   <td>20321</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.enterLoginPassword(java.lang.String)[pri:0, instance:whitefeather.xedge.testcases.Login@1a968a59]">enterLoginPassword</td> 
+  <td>main@2095490653</td>   <td></td> </tr>
+<tr bgcolor="f4a68b">  <td>17/09/13 18:56:36</td>   <td>20607</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.verifyLoginButton()[pri:0, instance:whitefeather.xedge.testcases.Login@1a968a59]">verifyLoginButton</td> 
+  <td>main@2095490653</td>   <td></td> </tr>
+<tr bgcolor="f4a68b">  <td>17/09/13 18:56:36</td>   <td>20752</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.clickLoginButton()[pri:0, instance:whitefeather.xedge.testcases.Login@1a968a59]">clickLoginButton</td> 
+  <td>main@2095490653</td>   <td></td> </tr>
+<tr bgcolor="c4c875">  <td>17/09/13 18:56:40</td>   <td>24191</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Refresh_Page.refreshWebPage()[pri:0, instance:whitefeather.xedge.testcases.Refresh_Page@4667ae56]">refreshWebPage</td> 
+  <td>main@2095490653</td>   <td></td> </tr>
+<tr bgcolor="82f6ef">  <td>17/09/13 18:56:43</td>   <td>27027</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OpenAddLeadRHSPanel.clickAddLeadPlusIcon()[pri:0, instance:whitefeather.xedge.testcases.OpenAddLeadRHSPanel@77cd7a0]">clickAddLeadPlusIcon</td> 
+  <td>main@2095490653</td>   <td></td> </tr>
+<tr bgcolor="6fc185">  <td>17/09/13 18:56:43</td>   <td>27804</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddNewLeadWithDefaultValues.addNewLeadWithDefaultValues()[pri:0, instance:whitefeather.xedge.testcases.AddNewLeadWithDefaultValues@204f30ec]">addNewLeadWithDefaultValues</td> 
+  <td>main@2095490653</td>   <td></td> </tr>
+<tr bgcolor="9b7d71">  <td>17/09/13 18:56:46</td>   <td>30619</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddActivity.addActivity()[pri:0, instance:whitefeather.xedge.testcases.AddActivity@e25b2fe]">addActivity</td> 
+  <td>main@2095490653</td>   <td></td> </tr>
 </table>
