--- a/EE_Web/test-output/old/Suite/reporter-output.html
+++ b/EE_Web/test-output/old/Suite/reporter-output.html
@@ -1,6 +1,13 @@
 <h2>Reporter output</h2><table><tr><td>Chrome Browser is opened</td></tr>
 <tr><td>Browser is maximized.</td></tr>
-<tr><td>User has opened correct login page.</td></tr>
+<tr><td>User has opened incorrect login page.</td></tr>
+<tr><td>Company Logo on Forgot Password is displayed</td></tr>
+<tr><td>Recovery Label on Forgot Password is displayed</td></tr>
+<tr><td>Recovery Message on Forgot Password is displayed</td></tr>
+<tr><td>Email Input Box on Forgot Password is displayed</td></tr>
+<tr><td>Login Link on Forgot Password is displayed</td></tr>
+<tr><td>Web page is refreshed.</td></tr>
+<tr><td>Reset Password Link is successfully sent to provided email address</td></tr>
 <tr><td>Background Image on Login Page is displayed</td></tr>
 <tr><td>Client Company Logo is displayed.</td></tr>
 <tr><td>'Username' label is displayed</td></tr>
@@ -13,7 +20,7 @@
 <tr><td>Username is entered successfully.</td></tr>
 <tr><td>Password is entered successfully.</td></tr>
 <tr><td>Login Button is displayed</td></tr>
-<tr><td>User has clicked Login button and landed on correct homepage.</td></tr>
+<tr><td>User has clicked Login button but not landed on incorrect homepage.</td></tr>
 <tr><td>Web page is refreshed.</td></tr>
 <tr><td>User has clicked Add Lead icon.</td></tr>
 <tr><td>User has entered email address successfully</td></tr>
