--- a/EE_Web/test-output/old/Suite/reporter-output.html
+++ b/EE_Web/test-output/old/Suite/reporter-output.html
@@ -1,6 +1,7 @@
 <h2>Reporter output</h2><table><tr><td>Chrome Browser is opened</td></tr>
 <tr><td>Browser is maximized.</td></tr>
-<tr><td>User has opened incorrect login page.</td></tr>
+<tr><td>User has opened correct login page.</td></tr>
+<tr><td>User has clicked Forgot Password Link on Login window.</td></tr>
 <tr><td>Company Logo on Forgot Password is displayed</td></tr>
 <tr><td>Recovery Label on Forgot Password is displayed</td></tr>
 <tr><td>Recovery Message on Forgot Password is displayed</td></tr>
@@ -11,7 +12,7 @@
 <tr><td>Background Image on Login Page is displayed</td></tr>
 <tr><td>Client Company Logo is displayed.</td></tr>
 <tr><td>'Username' label is displayed</td></tr>
-<tr><td>'Username' placeholder is not displayed</td></tr>
+<tr><td>'Username' placeholder is displayed</td></tr>
 <tr><td>'Password' label is displayed</td></tr>
 <tr><td>'Password' placeholder is displayed</td></tr>
 <tr><td>'Username' input field is displayed</td></tr>
@@ -20,12 +21,31 @@
 <tr><td>Username is entered successfully.</td></tr>
 <tr><td>Password is entered successfully.</td></tr>
 <tr><td>Login Button is displayed</td></tr>
-<tr><td>User has clicked Login button but not landed on incorrect homepage.</td></tr>
+<tr><td>User has clicked Login button and landed on correct homepage.</td></tr>
 <tr><td>Web page is refreshed.</td></tr>
+<tr><td>Company Logo in header is displayed</td></tr>
+<tr><td>Go Button in header is displayed</td></tr>
+<tr><td>OutStanding Activity Icon in header is displayed</td></tr>
+<tr><td>OutStanding Activity Count in header is displayed</td></tr>
+<tr><td>Counselor Name in header is displayed</td></tr>
+<tr><td>Counselor Photo in header is displayed</td></tr>
+<tr><td>Sign Out link in header is displayed</td></tr>
+<tr><td>Bulk Upload icon is displayed</td></tr>
+<tr><td>Add LeadPlus icon is displayed</td></tr>
+<tr><td>JoyRide button is displayed</td></tr>
 <tr><td>User has clicked Add Lead icon.</td></tr>
 <tr><td>User has entered email address successfully</td></tr>
 <tr><td>User has entered mobile number successfully</td></tr>
-<tr><td>User has clicked Add Lead button on RHS panel.</td></tr>
+<tr><td>SelectActivityType dropdown is provided successfully</td></tr>
 <tr><td>Activity Type is provided successfully</td></tr>
-<tr><td>Activity is added successfully</td></tr>
+<tr><td>User has entered email address successfully</td></tr>
+<tr><td>Add Activity Comment box is displayed.</td></tr>
+<tr><td>Activity Comment is added successfully</td></tr>
+<tr><td>User has entered email address successfully</td></tr>
+<tr><td>User has clicked Add Lead button on RHS panel.</td></tr>
+<tr><td>Global Search Bar is displayed.</td></tr>
+<tr><td>Global Search placeholder is displayed.</td></tr>
+<tr><td>Global Search Lense Icon is displayed.</td></tr>
+<tr><td>Global Search Go button is displayed.</td></tr>
+<tr><td>Screenshot is taken and stored at specified location successfully.</td></tr>
 </table>
