--- a/EE_Web/test-output/old/Suite/reporter-output.html
+++ b/EE_Web/test-output/old/Suite/reporter-output.html
@@ -36,16 +36,13 @@
 <tr><td>User has clicked Add Lead icon.</td></tr>
 <tr><td>User has entered email address successfully</td></tr>
 <tr><td>User has entered mobile number successfully</td></tr>
-<tr><td>SelectActivityType dropdown is provided successfully</td></tr>
-<tr><td>Activity Type is provided successfully</td></tr>
-<tr><td>User has entered email address successfully</td></tr>
-<tr><td>Add Activity Comment box is displayed.</td></tr>
-<tr><td>Activity Comment is added successfully</td></tr>
-<tr><td>User has entered email address successfully</td></tr>
 <tr><td>User has clicked Add Lead button on RHS panel.</td></tr>
 <tr><td>Global Search Bar is displayed.</td></tr>
 <tr><td>Global Search placeholder is displayed.</td></tr>
 <tr><td>Global Search Lense Icon is displayed.</td></tr>
 <tr><td>Global Search Go button is displayed.</td></tr>
-<tr><td>Screenshot is taken and stored at specified location successfully.</td></tr>
+<tr><td>Web page is refreshed.</td></tr>
+<tr><td>Recent New Tab Count displayed is correct.</td></tr>
+<tr><td>Recent New Tab and Count are displayed.</td></tr>
+<tr><td>Recent New Tab Count displayed is correct.</td></tr>
 </table>
