--- a/EE_Web/test-output/old/Suite/methods-not-run.html
+++ b/EE_Web/test-output/old/Suite/methods-not-run.html
@@ -1,8 +1,3 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>whitefeather.xedge.testcases.PerformLoginAction.verifyUsernamePlaceholder</td></tr>
-<tr><td>whitefeather.xedge.testcases.PerformLoginAction.verifyClientAccountLogo</td></tr>
-<tr><td>whitefeather.xedge.testcases.PerformLoginAction.verifyUsernameLabel</td></tr>
-<tr><td>whitefeather.xedge.testcases.PerformLoginAction.verifyPasswordPlaceholder</td></tr>
-<tr><td>whitefeather.xedge.testcases.PerformLoginAction.verifyLoginPageBackground</td></tr>
-<tr><td>whitefeather.xedge.testcases.PerformLoginAction.verifyPasswordLabel</td></tr>
+<tr><td>whitefeather.xedge.testcases.ForgotPassword.verifySubmitButton</td></tr>
 </table>
