--- a/EE_Web/test-output/old/Suite/methods-not-run.html
+++ b/EE_Web/test-output/old/Suite/methods-not-run.html
@@ -1,3 +1,4 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>whitefeather.xedge.testcases.LeadList.refreshAllLeadsData</td></tr>
 <tr><td>whitefeather.xedge.testcases.ForgotPassword.verifySubmitButton</td></tr>
 </table>
