--- a/EE_Web/test-output/old/Suite/reporter-output.html
+++ b/EE_Web/test-output/old/Suite/reporter-output.html
@@ -44,9 +44,47 @@
 <tr><td>Specified user details are successfully located in the system.</td></tr>
 <tr><td>Screenshot is taken and stored at specified location successfully.</td></tr>
 <tr><td>Web page is refreshed.</td></tr>
+<tr><td>Dashboard URL is correct.</td></tr>
+<tr><td>Recent New Tab is displayed.</td></tr>
 <tr><td>Recent New Tab Count displayed is correct.</td></tr>
-<tr><td>Recent New Tab and Count are displayed.</td></tr>
-<tr><td>Recent New Tab Count displayed is correct.</td></tr>
-<tr><td>Sending Test report to intended recepients is failed.</td></tr>
-<tr><td>Sending Test report to intended recepients is failed.</td></tr>
+<tr><td>Recent Online Tab is displayed.</td></tr>
+<tr><td>Recent Online Tab Count displayed is correct.</td></tr>
+<tr><td>Upcoming Followup Tab is displayed.</td></tr>
+<tr><td>Upcoming Followup Tab Count displayed is correct.</td></tr>
+<tr><td>Upcoming Walkins Tab is displayed.</td></tr>
+<tr><td>Upcoming Walkins Tab Count displayed is correct.</td></tr>
+<tr><td>High Priority Tab is displayed.</td></tr>
+<tr><td>High Priority Tab Count displayed is correct.</td></tr>
+<tr><td>Lead List Page URL is correct.</td></tr>
+<tr><td>All Tab is displayed.</td></tr>
+<tr><td>All Tab Count displayed is correct.</td></tr>
+<tr><td>New Tab is displayed.</td></tr>
+<tr><td>New Tab Count displayed is correct.</td></tr>
+<tr><td>Callback Tab is displayed.</td></tr>
+<tr><td>Callback Tab Count displayed is correct.</td></tr>
+<tr><td>Walkin Tab is displayed.</td></tr>
+<tr><td>Walkin Tab Count displayed is correct.</td></tr>
+<tr><td>Enrolled Tab is displayed.</td></tr>
+<tr><td>Enrolled Tab Count displayed is correct.</td></tr>
+<tr><td>Closed Tab is displayed.</td></tr>
+<tr><td>Closed Tab Count displayed is correct.</td></tr>
+<tr><td>Online Tab is displayed.</td></tr>
+<tr><td>Online Tab Count displayed is correct.</td></tr>
+<tr><td>Referred From Me Tab is displayed.</td></tr>
+<tr><td>Referred From Me Tab Count displayed is correct.</td></tr>
+<tr><td>Campaign Icon is displayed.</td></tr>
+<tr><td>User has successfully added new campaign.</td></tr>
+<tr><td>Refer All Leads Icon is displayed.</td></tr>
+<tr><td>User has referred all leads successfully.</td></tr>
+<tr><td>Send SMS To All Icon is displayed.</td></tr>
+<tr><td>User has sent SMS to all leads successfully.</td></tr>
+<tr><td>Send Email To All Icon is displayed.</td></tr>
+<tr><td>User has sent Email to all leads successfully.</td></tr>
+<tr><td>Send Email To All Icon is displayed.</td></tr>
+<tr><td>Download Leads Data Icon is displayed.</td></tr>
+<tr><td>User has successfully downloaded the leads data.</td></tr>
+<tr><td>Filter Leads Data Icon is displayed.</td></tr>
+<tr><td>User has successfully filtered the leads data.</td></tr>
+<tr><td>Test report has been sent to intended recepeints successfully</td></tr>
+<tr><td>Test report has been sent to intended recepeints successfully</td></tr>
 </table>
