--- a/EE_Web/test-output/old/Suite/reporter-output.html
+++ b/EE_Web/test-output/old/Suite/reporter-output.html
@@ -32,17 +32,45 @@
 <tr><td>Sign Out link in header is displayed</td></tr>
 <tr><td>Bulk Upload icon is displayed</td></tr>
 <tr><td>Add LeadPlus icon is displayed</td></tr>
+<tr><td>Web page is refreshed.</td></tr>
 <tr><td>JoyRide button is displayed</td></tr>
 <tr><td>User has clicked Add Lead icon.</td></tr>
-<tr><td>User has entered email address successfully</td></tr>
-<tr><td>User has entered mobile number successfully</td></tr>
-<tr><td>User has clicked Add Lead button on RHS panel.</td></tr>
+<tr><td>User has entered First Name successfully</td></tr>
+<tr><td>User has entered Last Name successfully</td></tr>
+<tr><td>User has entered Email Address successfully</td></tr>
+<tr><td>User has entered Mobile Number successfully</td></tr>
+<tr><td>User has entered Highest Qualification successfully</td></tr>
+<tr><td>User has provided Season value successfully.</td></tr>
+<tr><td>User has provided Source value successfully.</td></tr>
+<tr><td>User has provided Channel value successfully.</td></tr>
+<tr><td>User has provided Priority value successfully.</td></tr>
+<tr><td>User has provided Status value successfully.</td></tr>
+<tr><td>User has provided Reason value successfully.</td></tr>
+<tr><td>User has provided ReferredTo value successfully.</td></tr>
+<tr><td>User has provided Entity1 value successfully.</td></tr>
+<tr><td>User has provided Entity2 value successfully.</td></tr>
+<tr><td>User has provided Entity3 value successfully.</td></tr>
+<tr><td>User has provided Entity4 value successfully.</td></tr>
+<tr><td>User has provided Best Call value successfully.</td></tr>
+<tr><td>User has provided Lead Qualified value successfully.</td></tr>
+<tr><td>User has provided Lead Contactable value successfully.</td></tr>
+<tr><td>User has provided Mobile Verified value successfully.</td></tr>
+<tr><td>User has provided Field1 value successfully.</td></tr>
+<tr><td>User has provided Field2 value successfully.</td></tr>
+<tr><td>User has provided Field3 value successfully.</td></tr>
+<tr><td>User has provided Field4 value successfully.</td></tr>
+<tr><td>User has provided Field5 value successfully.</td></tr>
+<tr><td>User has provided Country value successfully.</td></tr>
+<tr><td>User has provided State value successfully.</td></tr>
+<tr><td>User has provided City value successfully.</td></tr>
+<tr><td>User has provided City value successfully.</td></tr>
+<tr><td>User has clicked on Add Lead button successfully.</td></tr>
 <tr><td>Global Search Bar is displayed.</td></tr>
 <tr><td>Global Search placeholder is displayed.</td></tr>
 <tr><td>Global Search Lense Icon is displayed.</td></tr>
 <tr><td>Global Search Go button is displayed.</td></tr>
-<tr><td>Specified user details are successfully located in the system.</td></tr>
 <tr><td>Screenshot is taken and stored at specified location successfully.</td></tr>
+<tr><td>No results found for provided string.</td></tr>
 <tr><td>Web page is refreshed.</td></tr>
 <tr><td>Dashboard URL is correct.</td></tr>
 <tr><td>Recent New Tab is displayed.</td></tr>
