--- a/EE_Web/test-output/old/Suite/reporter-output.html
+++ b/EE_Web/test-output/old/Suite/reporter-output.html
@@ -22,7 +22,6 @@
 <tr><td>Password is entered successfully.</td></tr>
 <tr><td>Login Button is displayed</td></tr>
 <tr><td>User has clicked Login button and landed on correct homepage.</td></tr>
-<tr><td>Web page is refreshed.</td></tr>
 <tr><td>Company Logo in header is displayed</td></tr>
 <tr><td>Go Button in header is displayed</td></tr>
 <tr><td>OutStanding Activity Icon in header is displayed</td></tr>
@@ -34,6 +33,12 @@
 <tr><td>Add LeadPlus icon is displayed</td></tr>
 <tr><td>Web page is refreshed.</td></tr>
 <tr><td>JoyRide button is displayed</td></tr>
+<tr><td>User has clicked Add Lead icon.</td></tr>
+<tr><td>User has entered Email Address successfully</td></tr>
+<tr><td>User has entered Mobile Number successfully</td></tr>
+<tr><td>User has clicked on Add Lead button successfully.</td></tr>
+<tr><td>User has clicked Close(X) button on RHS panel.</td></tr>
+<tr><td>Web page is refreshed.</td></tr>
 <tr><td>User has clicked Add Lead icon.</td></tr>
 <tr><td>User has entered First Name successfully</td></tr>
 <tr><td>User has entered Last Name successfully</td></tr>
@@ -65,12 +70,13 @@
 <tr><td>User has provided City value successfully.</td></tr>
 <tr><td>User has provided City value successfully.</td></tr>
 <tr><td>User has clicked on Add Lead button successfully.</td></tr>
+<tr><td>User has clicked Close(X) button on RHS panel.</td></tr>
 <tr><td>Global Search Bar is displayed.</td></tr>
 <tr><td>Global Search placeholder is displayed.</td></tr>
 <tr><td>Global Search Lense Icon is displayed.</td></tr>
 <tr><td>Global Search Go button is displayed.</td></tr>
+<tr><td>Specified user details are successfully located in the system.</td></tr>
 <tr><td>Screenshot is taken and stored at specified location successfully.</td></tr>
-<tr><td>No results found for provided string.</td></tr>
 <tr><td>Web page is refreshed.</td></tr>
 <tr><td>Dashboard URL is correct.</td></tr>
 <tr><td>Recent New Tab is displayed.</td></tr>
@@ -113,6 +119,11 @@
 <tr><td>User has successfully downloaded the leads data.</td></tr>
 <tr><td>Filter Leads Data Icon is displayed.</td></tr>
 <tr><td>User has successfully filtered the leads data.</td></tr>
+<tr><td>User has opened Edit Lead Panel.</td></tr>
+<tr><td>User has edited First Name.</td></tr>
+<tr><td>User has edited Last Name.</td></tr>
+<tr><td>User has edited Last Name.</td></tr>
+<tr><td>User has clicked on Update Lead button successfully.</td></tr>
 <tr><td>Test report has been sent to intended recepeints successfully</td></tr>
 <tr><td>Test report has been sent to intended recepeints successfully</td></tr>
 </table>
